@startuml
'https://plantuml.com/class-diagram

class java.ToDoList {
list : List<Event>
-title : String
--
List(title)
..Setters/Getters..
setTitle()
getTitle()
..
AddItem()
SaveList()
LoadList()
DeleteList()
SortListAlphabetical()
SortListDuedate()
GetComplete()
GetIncomplete()
getItem(x)
}

class java.Item {
-desc : String
-duedate : long //MMDDYYYY
-completed : boolean
--
Event(String, LocalDate)
..Setters/Getters..
SetDesc()
GetDesc()
SetDuedate()
GetDuedate()
SetCompleted()
GetCompleted()
}

java.ToDoList "made up of" -- java.Item : >

java.ToDoListApp -- java.Controller : > calls
resources.FXMLfile .. java.Controller : < controls
java.Controller -- java.ToDoList : > calls


class java.Controller{
--List Management--
New List
?Edit List
Load List
Save Lists
Delete Lists
--View--
Sort by Alphabetical
Sort by Duedate
Display Complete
Display Incomplete
Display All
--
New Event
Edit Event
Mark Complete/Incomplete
}

class java.ToDoListApp{
main()
start()
}

@enduml